--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js",
+    "dev": "node src/index.js",
     "start": "node src/index.js",
-    "test": "jest --watch-all"
+    "test": "jest --watch-all",
+    "seed": "node ./src/models/seeders/achievements.js"
   },
   "keywords": [],
   "author": "",
