fix: calculateLevel function and refactory todo tasks logic

--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
     "test": "jest --watch-all",
-    "test:alarms": "jest test/integration/alarm-controller.test.js",
+    "test:alarm": "jest test/integration/alarm-controller.test.js",
+    "test:auth": "jest test/integration/auth-controller.test.js",
+    "test:level": "jest test/integration/calculate-level.test.js",
+    "test:notes": "jest test/integration/notes-controller.test.js",
+    "test:todo": "jest test/integration/todo-controller.test.js",
+    "test:user": "jest test/integration/user-controller.test.js",
     "seed": "node ./src/models/seeders/achievementsSeed.js"
   },
   "keywords": [],
